kubernetes/applications/omada-controller/kubernetes-01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omada-controller-entrance
spec:
  hostnames:
    - omada-controller.tools.internal.place
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-api-extra-gateway-production
      namespace: istio
      sectionName: https-terminate
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: omada-controller
          port: 8043
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: omada-controller-forward-traffic-tls
spec:
  host: omada-controller.omada-controller.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
