kubernetes/applications/omada-controller/kubernetes-01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omada-controller
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "omada-controller.tools.internal.place"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: omada-controller
              port:
                name: "manage-https"
  tls:
    - hosts:
        - *host
      secretName: omada-controller-tls
